<resources>

    <!--general purposes-->
    <string name="appName">BilkentEvents</string>
    <string name="bilkentID">Bilkent ID:</string>
    <string name="exampleID">11222333</string>
    <string name="email">Email:</string>
    <string name="exampleEmail">example@ug.bilkent.edu.tr</string>
    <string name="password">Password:</string>
    <string name="settings">Settings:</string>
    <string name="welcome">Welcome to Bilkent Events!</string>
    <string name="login">LOGIN</string>
    <string name="loginPage">Login Page</string>
    <string name="loginToAccount">login to account</string>
    <string name="loginWith">or login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <!--intro-->
    <string name="clickToStart">Click to start the Bilkent Events app</string>
    <string name="getStarted">GET STARTED</string>
    <string name="contentDescription">a picture of a man with a light bulb</string>
    <string name="contentDescription2">background image for the login</string>

    <!--create account-->
    <string name="createAccount">create a new account</string>
    <string name="create">Create a new Bilkent Events account:</string>

    <!--forgot password-->
    <string name="changePassword">change password</string>
    <string name="forgotPassword">forgot password?</string>
    <string name="forgot">Forgot your password?</string>

    <!--home page-->
    <string name="exampleDate">December 8th, 2022</string>
    <string name="todaysEvents">Today\'s Events</string>

    <!--event organizer-->
    <string name="applyEvent">Apply for Events:</string>
    <string name="eventMonth1">Events for November:</string>
    <string name="eventMonth2">Events for December:</string>

    <!-- settings -->
    <string name="exampleName">John Doe</string>
    <string name="logout">logout</string>
    <string name="username">Username:</string>
    <string name="userID">11222333</string>
    <string name="userPassword">********</string>

    <!--example events-->
    <string name="event1">Example event | Example club | 01/01/1999 | 10/120 | (GE 250/1 included)</string>
    <string name="event2">Example event | Example club | 02/01/1999 | 11/80 |(Seminar)</string>
    <string name="event3">Example event | Example club | 03/01/1999 | 13/40 | (Turkish)</string>
    <string name="event4">Example event | Example club | 04/01/1999 | 9/40 | (zoom)</string>
    <string name="Email">Email</string>

    <!--    change password-->
    <string name="change_password">Change your password:</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="time">Time</string>
    <string name="clubname">clubName</string>
    <string name="date">Date</string>
    <string name="eventname">EventName</string>
    <string name="capacity">Capacity</string>
    <string name="location">Location</string>

</resources>
