<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_page"
        android:contentDescription="@string/contentDescription2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_top_corned_background"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/bilidlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/bilkentID"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:autofillHints="bilkentID"
            android:background="@drawable/edittext_white"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/exampleID"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/passlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_white"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/userPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/forgot"
            android:textAlignment="viewStart"
            android:textColor="#4d4d4d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/loginWith"
                android:textColor="#4d4d4d" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_border_button"
                android:drawableStart="@drawable/google"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/google"
                android:textColor="#1704A1"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_border_button"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/facebook"
                android:textColor="#1704A1"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/red_button_background"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/createAccount"
            android:textColor="#4d4d4d" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/half_white_background"
        android:fontFamily="@font/lato_bold"
        android:padding="16dp"
        android:text="@string/appName"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>